2009-08-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/edebug.el (edebug-display, edebug-outside-excursion):
	Replace uses of default-cursor-in-non-selected-windows
	with (default-value 'cursor-in-non-selected-windows).
	Use with-current-buffer.

	* mail/feedmail.el: Use CL macros.
	(feedmail-run-the-queue, feedmail-send-it-immediately):
	* dos-w32.el (find-buffer-file-type): Replace uses of
	default-buffer-file-type with (default-value 'buffer-file-type).

2009-08-28  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-list-entries, diary-goto-entry)
	(diary-show-all-entries, diary-mark-entries, diary-make-entry):
	Use default-value of major-mode rather than default-major-mode.

2009-08-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (update-elcfiles): Report left over elc files.

	* mail/mailalias.el (build-mail-aliases): Use with-temp-buffer,
	expand-file-name and with-current-buffer.
	(mail-get-names, mail-directory): Use with-current-buffer.

	* vc.el (vc-read-revision): New function.
	(vc-version-diff, vc-merge): Use it.

2009-08-27  Sam Steingold  <sds@gnu.org>

	* simple.el (kill-do-not-save-duplicates): New user option.
	(kill-new): When it is non-nil, and the new string is the same as
	the latest kill, set replace to t to avoid duplicates in kill-ring.

2009-08-19  Julian Scheid  <julians37@gmail.com>  (tiny change)

	* net/tramp.el (tramp-handle-process-file): Do not flush all
	caches when `process-file-side-effects' is set.
	(tramp-handle-vc-registered): Use `tramp-get-file-exists-command'
	instead of `tramp-find-file-exists-command'.
	Unset `process-file-side-effects'.

2009-08-27  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-methods): New method "rsyncc".
	(top): Add completion function for "rsyncc".
	(tramp-message-show-message): New defvar.
	(tramp-message, tramp-error): Use it.
	(tramp-do-copy-or-rename-file-directly): Extend check for direct
	remote copying.