@@ -1,3 +1,8 @@
+2009-08-28  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* mh-comp.el (mh-send-letter): default-buffer-file-coding-system
+	=> (default-value 'buffer-file-coding-system).
+
 2009-08-10  Bill Wohler  <wohler@newt.com>
 
 	* mh-junk.el (mh-spamassassin-blacklist, mh-bogofilter-blacklist)
